--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
     "sass-embedded": "^1.82.0",
     "zustand": "^5.0.2"
